Updating CV, add SIIM CDI section

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
           <p>Peter is an experienced software developer and data scientist, specializing in data access, analysis, and
             visualization. He is passionate about healthcare, especially focused on technology to boost
             patient-centered care. He earned his Bachelor's degree in Biomedical Engineering, with an emphasis in
-            biocomputing, in 2018 and is currently pursuing a Master's degree in Computational Mathematical and
-            Statistical Sciences. </p>
+            biocomputing, in 2018, and his Master's degree in Computational Mathematical and
+            Statistical Sciences, in 2021. </p>
         </div>
       </div>
     </div>
@@ -160,6 +160,20 @@
           <h3 class="section-heading text-uppercase">Projects</h3>
         </div>
       </div>
+      <div class="row" id="siimcdi">
+        <div class="col">
+          <a href="https://youtu.be/9MFvMtiSgG0?si=e40EPOBD8CEaNNR4">
+            DICOM For Informaticists 1
+          </a>
+          <a href="https://youtu.be/EfmFsDFQdBA?si=e-tUr_7ZKrXMwIFj">
+            DICOM For Informaticists 2
+          </a>
+          <p>
+            Wrote and recorded a pair of lectures on the DICOM standard, as it relates to Clinical Data Informaticists.
+          </p>
+        </div>
+      </div>
+      <hr>
       <div class="row" id="emr6050">
         <div class="col">
           <a href="https://emr6050.github.io" class="link-img">
@@ -170,8 +184,7 @@
           </a>
           <p>
             A suite of cloud-based tools to meet the technical needs of a new behavioral health clinic. All instances
-            and
-            data are hosted on AWS. This project is on-going as a part of my Master's thesis project.
+            and data are hosted on AWS. This project is on-going as a part of my Master's thesis project.
           </p>
         </div>
       </div>
@@ -186,8 +199,7 @@
           </a>
           <p>
             I was the team lead for a group of developers that participated in the 2018 and 2019 SIIM Hackathons. Click
-            on
-            the logo above for more information.
+            on the logo above for more information.
           </p>
           <p>
             I presented on the following projects during the SIIM Hackathon Showcase
@@ -231,15 +243,13 @@
           <p>
             I am honored to be an alumnus of the Engineering World Health Summer Institutes. Since being a program
             participant in 2016, I have been contracted by them twice as an On the Ground Coordinator - once in Rwanda
-            and
-            once in Uganda. I am not currently employed by EWH but I will always carry the memories in my heart.
+            and once in Uganda. I am not currently employed by EWH but I will always carry the memories in my heart.
           </p>
           <p>
             While abroad, I documented my experiences in the form of a travel blog. I have added to it since my trips to
             share updates and any talks I have given on my experiences. You can access my writing by clicking the below.
             I'm always excited to share stories and lessons from my time in East Africa. Feel free to contact me with
-            any
-            questions or speaking opportunities.
+            any questions or speaking opportunities.
           </p>
         </div>
       </div>
@@ -273,55 +283,50 @@
       <div class="row">
         <div class="col">
           <p><b>Fall 2021</b>
-            <ul>
-              <li>
-                Participates in <a href="https://confluence.hl7.org/pages/viewpage.action?pageId=118981120#id-202109Connectathon28-VirtualHL7FHIRCONNECTATHON28">
+          <ul>
+            <li>
+              Participates in <a
+                href="https://confluence.hl7.org/pages/viewpage.action?pageId=118981120#id-202109Connectathon28-VirtualHL7FHIRCONNECTATHON28">
                 FHIR Connectathon 28</a>, Imaging track
-              </li>
-            </ul>
+            </li>
+          </ul>
           </p>
           <p><b>Summer 2021</b>
-            <ul>
-              <li>
-                Earned Certified Scrum Product Owner (CSPO) certification
-              </li>
-            </ul>
+          <ul>
+            <li>
+              Earned Certified Scrum Product Owner (CSPO) certification
+            </li>
+          </ul>
           </p>
           <p><b>Spring 2021</b>
-            <ul>
-              <li>
-                Participates in <a href="https://confluence.hl7.org/pages/viewpage.action?pageId=104568828#id-202105Connectathon27-VirtualHL7FHIRCONNECTATHON27">
+          <ul>
+            <li>
+              Participates in <a
+                href="https://confluence.hl7.org/pages/viewpage.action?pageId=104568828#id-202105Connectathon27-VirtualHL7FHIRCONNECTATHON27">
                 FHIR Connectathon 27</a>, FHIRcast track
-              </li>
-            </ul>
-          </p>
-          <p><b>Fall/Winter 2020</b>
-            <ul>
-              <li>
-                Peter officially moves from Milwaukee to Minneapolis (yay!)
-              </li>
-            </ul>
-          </p>
-          <p><b>Summer 2020</b>
-            <ul>
-              <li>
-                Peter accepts offer from Vital Images, Inc (Canon Medical Systems), joins development effort for
-                Vitrea Intelligence
-              </li>
-            </ul>
+            </li>
+          </ul>
           </p>
           <p><b>Spring 2020</b>
-            <ul>
-              <li>
-                Peter's fourth season of college ultimate is cancelled (perhaps postponed?) due to the COVID-19
-                pandemic. Though, practices were held up until Marquette University's spring break.
-              </li>
-              <li>
-                Classes started up for the Spring semester, enrolled in (Statistical) Simulation and Applied
-                Mathematical Analysis. Due to the COVID-19 pandemic, the courses switch to online following 
-                spring break.
-              </li>
-            </ul>
+          <ul>
+            <li>
+              Peter accepts offer from Vital Images, Inc (Canon Medical Systems), joins development effort for
+              Vitrea Intelligence
+            </li>
+          </ul>
+          </p>
+          <p><b>Spring 2020</b>
+          <ul>
+            <li>
+              Peter's fourth season of college ultimate is cancelled (perhaps postponed?) due to the COVID-19
+              pandemic. Though, practices were held up until Marquette University's spring break.
+            </li>
+            <li>
+              Classes started up for the Spring semester, enrolled in (Statistical) Simulation and Applied
+              Mathematical Analysis. Due to the COVID-19 pandemic, the courses switch to online following
+              spring break.
+            </li>
+          </ul>
           </p>
           <p><b>Fall 2019</b></p>
           <ul>
@@ -334,58 +339,58 @@
             </li>
           </ul>
           <p><b>Summer 2019</b>
-            <ul>
-              <li>
-                Traveled to Denver, Colorada to attend the Society of Imaging Informatics in Medicine (SIIM)
-                Annual Meeting and compete in the hackathon. For the second year in a row, he led a team of students
-                from the Great Lakes region, known as <a href="https://greatlakessiim.github.io">Team Great
-                  Lakes</a> (TGL). TGL placed third overall with one of its projects and won the popular vote
-                with another. Peter has appeared in numerous subsequent SIIM promotional materials.
-              </li>
-              <li>
-                Peter helped startup and was elected Captain of a new Ultimate Frisbee team in Milwaukee, WI - <a
-                  href="https://twitter.com/MKE_Revival">Milwaukee
-                  Revival</a>.
-              </li>
-            </ul>
+          <ul>
+            <li>
+              Traveled to Denver, Colorada to attend the Society of Imaging Informatics in Medicine (SIIM)
+              Annual Meeting and compete in the hackathon. For the second year in a row, he led a team of students
+              from the Great Lakes region, known as <a href="https://greatlakessiim.github.io">Team Great
+                Lakes</a> (TGL). TGL placed third overall with one of its projects and won the popular vote
+              with another. Peter has appeared in numerous subsequent SIIM promotional materials.
+            </li>
+            <li>
+              Peter helped startup and was elected Captain of a new Ultimate Frisbee team in Milwaukee, WI - <a
+                href="https://twitter.com/MKE_Revival">Milwaukee
+                Revival</a>.
+            </li>
+          </ul>
           </p>
           <p><b>Spring 2019</b>
-            <ul>
-              <li>
-                Built a prototype solution for documenting patient encounters at a recently funded mental health
-                clinic in Milwaukee, WI. (<a href="https://emr6050.github.io/">EMR6050</a>)
-              </li>
-              <li>
-                Spoke to students at Milwaukee School of Languages on scholastic and professional opportunities in
-                the STEM field from the lense of a current graduate student who had global technical internship
-                experiences.
-              </li>
-              <li>
-                Peter plays his third season for Marquette's D1 Ultimate Frisbee team, Birdhouse. (<a
-                  href="https://twitter.com/birdhousemu">@BirdhouseMU</a>) <a
-                  href="https://play.usaultimate.org/teams/events/Eventteam/?TeamId=Mt%2B%2FvUJUCoZN9dEQJBCaYRlAYdFLGaegq66I12ndfBY%3D">
-                  Marquette (Birdhouse) 2018 Roster
-                </a> Peter Dobbs (#77)
-              </li>
-            </ul>
+          <ul>
+            <li>
+              Built a prototype solution for documenting patient encounters at a recently funded mental health
+              clinic in Milwaukee, WI. (<a href="https://emr6050.github.io/">EMR6050</a>)
+            </li>
+            <li>
+              Spoke to students at Milwaukee School of Languages on scholastic and professional opportunities in
+              the STEM field from the lense of a current graduate student who had global technical internship
+              experiences.
+            </li>
+            <li>
+              Peter plays his third season for Marquette's D1 Ultimate Frisbee team, Birdhouse. (<a
+                href="https://twitter.com/birdhousemu">@BirdhouseMU</a>) <a
+                href="https://play.usaultimate.org/teams/events/Eventteam/?TeamId=Mt%2B%2FvUJUCoZN9dEQJBCaYRlAYdFLGaegq66I12ndfBY%3D">
+                Marquette (Birdhouse) 2018 Roster
+              </a> Peter Dobbs (#77)
+            </li>
+          </ul>
           </p>
           <p><b>Fall 2018</b>
-            <ul>
-              <li>
-                Begins graduate studies at Marquette University, under the support of the GasDay Lab, taking courses on
-                Healthcare Quality, Data Ethics, and Business Intelligence.
-              </li>
-            </ul>
+          <ul>
+            <li>
+              Begins graduate studies at Marquette University, under the support of the GasDay Lab, taking courses on
+              Healthcare Quality, Data Ethics, and Business Intelligence.
+            </li>
+          </ul>
           </p>
           <p><b>Summer 2018</b>
-            <ul>
-              <li>
-                Peter served as the On the Ground Coordinator for Engineering World Health's 2nd annual Summer Institute
-                to Uganda.<a href="https://www.ewh.org/blog-posts/introducing-the-2018-summer-institute-coordinators/">
-                  Introducing the 2018 Summer Institute Coordinators!</a> lists Peter as the EWH SI Uganda 2018 On The
-                Ground Coordinator
-              </li>
-            </ul>
+          <ul>
+            <li>
+              Peter served as the On the Ground Coordinator for Engineering World Health's 2nd annual Summer Institute
+              to Uganda.<a href="https://www.ewh.org/blog-posts/introducing-the-2018-summer-institute-coordinators/">
+                Introducing the 2018 Summer Institute Coordinators!</a> lists Peter as the EWH SI Uganda 2018 On The
+              Ground Coordinator
+            </li>
+          </ul>
           </p>
           <!-- <ul>
             <li>
