Updating news and headshot
Adding news headlines and updating headshot

--- a/index.html
+++ b/index.html
@@ -282,6 +282,47 @@
       </div>
       <div class="row">
         <div class="col">
+          <p><b>2025 H1</b>
+          <ul>
+            <li>
+              Promoted to Product Analyst (Level 3, Senior position) in recognition of accomplishments and
+              dedication to Canon Medical Informatics.
+            </li>
+          </ul>
+          </p>
+          <p><b>2024 H2</b>
+          <ul>
+            <li>
+              Converted to fully-remote working practices while still employed out of the Minneapolis office of Canon
+              Medical Informatics.
+            </li>
+          </ul>
+          </p>
+          <p><b>2024 H1</b>
+          <ul>
+            <li>
+              Nominated to represent engineering operations at in-person collaboration meetings in Nasu, Japan (Canon
+              Medical's global hub). This opportunity included two 1-week business trips from Minneapolis to Japan.
+            </li>
+          </ul>
+          </p>
+          </p>
+          <p><b>2023 H2</b>
+          <ul>
+            <li>
+              Earned Advanced Certified Scrum Product Owner (A-CSPO) certification
+            </li>
+          </ul>
+          </p>
+          </p>
+          <p><b>2022 H1</b>
+          <ul>
+            <li>
+              Promoted to Software Engineer (Level 2), in recognition of accomplishments and dedication to Canon Medical
+              Informatics.
+            </li>
+          </ul>
+          </p>
           <p><b>Fall 2021</b>
           <ul>
             <li>
