--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12 text-center">
-          <p>You've reached my personal page. I'm always working on expanding it. So visit often! :)</p>
+          <p>You've reached my personal portfolio. I'm always working on expanding it. So visit often! :)</p>
           <p>You can find my CV here:
             <a href="assets/PeterDobbs_cv.pdf">
               <i class="fa fa-file-pdf-o"></i>
@@ -145,7 +145,7 @@
           <p>Peter is an experienced software developer and data scientist, specializing in data access, analysis, and
             visualization. He is passionate about healthcare, especially focused on technology to boost
             patient-centered care. He earned his Bachelor's degree in Biomedical Engineering, with an emphasis in
-            biocomputing, in 2018, and his Master's degree in Computational Mathematical and
+            Biocomputing, in 2018, and his Master's degree in Computational Mathematical and
             Statistical Sciences, in 2021. </p>
         </div>
       </div>
