Updates to website copy

--- a/index.html
+++ b/index.html
@@ -142,11 +142,10 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <p>Peter is an experienced software developer and data scientist, specializing in data access, analysis, and
-            visualization. He is passionate about healthcare, especially focused on technology to boost
-            patient-centered care. He earned his Bachelor's degree in Biomedical Engineering, with an emphasis in
-            Biocomputing, in 2018, and his Master's degree in Computational Mathematical and
-            Statistical Sciences, in 2021. </p>
+          <p>Peter is an experienced software developer and data explorer, specializing in data access, analysis, and
+            visualization. He is passionate about improving the experience of the end-user, following the mantra: 
+            "Begin with the end in mind." He earned his Bachelor's degree in Biomedical Engineering, with an emphasis in
+            Biocomputing, in 2018, and his Master's degree in Computational Mathematical and Statistical Sciences, in 2021. </p>
         </div>
       </div>
     </div>
@@ -169,7 +168,8 @@
             DICOM For Informaticists 2
           </a>
           <p>
-            Wrote and recorded a pair of lectures on the DICOM standard, as it relates to Clinical Data Informaticists.
+            Along with <a href="https://www.linkedin.com/in/kinsonho">Kinson Ho</a>, I wrote and recorded a pair of lectures 
+            on the DICOM standard, as it relates to Clinical Data Informaticists. These videos are available at the links above.
           </p>
         </div>
       </div>
@@ -184,7 +184,7 @@
           </a>
           <p>
             A suite of cloud-based tools to meet the technical needs of a new behavioral health clinic. All instances
-            and data are hosted on AWS. This project is on-going as a part of my Master's thesis project.
+            and data were hosted on AWS. This project was completed as a part of my Master's thesis project.
           </p>
         </div>
       </div>
