--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="col-lg-12 text-center">
           <p>You've reached my personal portfolio. I'm always working on expanding it. So visit often! :)</p>
           <p>You can find my CV here:
-            <a href="assets/PeterDobbs_cv.pdf">
+            <a href="assets/DobbsPeterN_cv.pdf">
               <i class="fa fa-file-pdf-o"></i>
             </a>
           </p>
