adding calendly widget and updating about copy

--- a/index.html
+++ b/index.html
@@ -142,14 +142,20 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <p>Peter is an experienced software developer and data explorer, specializing in data access, analysis, and
+          <p>Peter is an experienced software developer, data explorer, and product manager, specializing in data access, analysis, and
             visualization. He is passionate about improving the experience of the end-user, following the mantra: 
-            "Begin with the end in mind." He earned his Bachelor's degree in Biomedical Engineering, with an emphasis in
-            Biocomputing, in 2018, and his Master's degree in Computational Mathematical and Statistical Sciences, in 2021. </p>
+            "Begin with the end in mind." He holds a Bachelor's degree in Biomedical Engineering, with an emphasis in
+            Biocomputing, and a Master's degree in Computational Mathematical and Statistical Sciences.</p>
         </div>
       </div>
     </div>
   </section>
+
+  <!-- Calendly badge widget begin -->
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+  <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/dobbsp8/30min', text: 'Schedule time with me', color: '#94c2ff', textColor: '#ffffff', branding: true }); }</script>
+  <!-- Calendly badge widget end -->
 
   <!-- Projects/Organizations -->
   <section id="proj-orgs">
