cleanup and adding reference to agentic-healthcare-analytics project repo

--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <p>Peter is an experienced software developer, data explorer, and product manager, specializing in data access, analysis, and
-            visualization. He is passionate about improving the experience of the end-user, following the mantra: 
-            "Begin with the end in mind." He holds a Bachelor's degree in Biomedical Engineering, with an emphasis in
-            Biocomputing, and a Master's degree in Computational Mathematical and Statistical Sciences.</p>
+          <p>Peter is an experienced software developer, data explorer, and product manager, specializing in data
+            access, analysis, and visualization. He is passionate about improving the experience of the end-user,
+            following the mantra: "Begin with the end in mind." He holds a Bachelor's degree in Biomedical Engineering,
+            with an emphasis in Biocomputing, and a Master's degree in Computational Mathematical and Statistical
+            Sciences.</p>
         </div>
       </div>
     </div>
@@ -154,7 +155,8 @@
   <!-- Calendly badge widget begin -->
   <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
   <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-  <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/dobbsp8', text: 'Schedule time with me', color: '#94c2ff', textColor: '#ffffff', branding: true }); }</script>
+  <script
+    type="text/javascript">window.onload = function () { Calendly.initBadgeWidget({ url: 'https://calendly.com/dobbsp8', text: 'Schedule time with me', color: '#94c2ff', textColor: '#ffffff', branding: true }); }</script>
   <!-- Calendly badge widget end -->
 
   <!-- Projects/Organizations -->
@@ -165,6 +167,21 @@
           <h3 class="section-heading text-uppercase">Projects</h3>
         </div>
       </div>
+      <div class="row" id="agentic-healthcare-analytics">
+        <div class="col">
+          <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics">
+            Agentic Healthcare Analytics
+          </a>
+          <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics" class="link-img">
+            <i class="fa fa-github"></i>
+          </a>
+          <p>
+            WIP Agentic AI system for performing analytics on healthcare data. Providing an agentic interface for
+            interacting with <a href="https://fhir.org/">🔥 FHIR</a> Resources
+          </p>
+        </div>
+      </div>
+      <hr>
       <div class="row" id="siimcdi">
         <div class="col">
           <a href="https://youtu.be/9MFvMtiSgG0?si=e40EPOBD8CEaNNR4">
@@ -174,8 +191,9 @@
             DICOM For Informaticists 2
           </a>
           <p>
-            Along with <a href="https://www.linkedin.com/in/kinsonho">Kinson Ho</a>, I wrote and recorded a pair of lectures 
-            on the DICOM standard, as it relates to Clinical Data Informaticists. These videos are available at the links above.
+            Along with <a href="https://www.linkedin.com/in/kinsonho">Kinson Ho</a>, I wrote and recorded a pair of
+            lectures on the DICOM standard, as it relates to Clinical Data Informaticists. These videos are available at
+            the links above.
           </p>
         </div>
       </div>
