adding logo for agentic healthcare analytics project

--- a/index.html
+++ b/index.html
@@ -169,11 +169,14 @@
       </div>
       <div class="row" id="agentic-healthcare-analytics">
         <div class="col">
-          <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics">
-            Agentic Healthcare Analytics
+          <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics" class="link-img">
+            <img src="assets/img/logos/agentic-healthcare.png" alt="Agentic Healthcare" style="width:220px;">
           </a>
           <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics" class="link-img">
             <i class="fa fa-github"></i>
+          </a>
+          <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics">
+            Agentic Healthcare Analytics
           </a>
           <p>
             WIP Agentic AI system for performing analytics on healthcare data. Providing an agentic interface for
