--- a/index.html
+++ b/index.html
@@ -193,11 +193,15 @@
             <img src="assets/img/logos/SIIM-CDI_1920x1080.jpg" alt="SIIM CDI" style="width:120px;">
           </a>
           <p>
-            <a href="https://youtu.be/9MFvMtiSgG0?si=e40EPOBD8CEaNNR4">
-              DICOM For Informaticists 1
+            <a href="https://siim.org/resources/resource-catalog/clinical-data-informatics/">
+              SIIM Clinical Data Informatics
             </a>
           </p>
           <p>
+            <a href="https://youtu.be/9MFvMtiSgG0?si=e40EPOBD8CEaNNR4">
+              DICOM For Informaticists 1
+            </a>
+            <br>
             <a href="https://youtu.be/EfmFsDFQdBA?si=e-tUr_7ZKrXMwIFj">
               DICOM For Informaticists 2
             </a>
