--- a/index.html
+++ b/index.html
@@ -190,12 +190,17 @@
       <div class="row" id="siimcdi">
         <div class="col">
           <a href="https://siim.org/resources/resource-catalog/clinical-data-informatics/" class="link-img">
-            <img src="assets/img/logos/SIIM-CDI_1920x1080.jpg" alt="SIIM CDI" style="width:120px;">
+            <img src="assets/img/logos/SIIM-CDI_1920x1080.jpg" alt="SIIM CDI" style="width:200px;">
           </a>
           <p>
             <a href="https://siim.org/resources/resource-catalog/clinical-data-informatics/">
               SIIM Clinical Data Informatics
             </a>
+          </p>
+          <p>
+            Along with <a href="https://www.linkedin.com/in/kinsonho">Kinson Ho</a>, I wrote and recorded a pair of
+            lectures on the DICOM standard, as it relates to Clinical Data Informaticists. These videos are available at
+            the links below.
           </p>
           <p>
             <a href="https://youtu.be/9MFvMtiSgG0?si=e40EPOBD8CEaNNR4">
@@ -205,11 +210,6 @@
             <a href="https://youtu.be/EfmFsDFQdBA?si=e-tUr_7ZKrXMwIFj">
               DICOM For Informaticists 2
             </a>
-          </p>
-          <p>
-            Along with <a href="https://www.linkedin.com/in/kinsonho">Kinson Ho</a>, I wrote and recorded a pair of
-            lectures on the DICOM standard, as it relates to Clinical Data Informaticists. These videos are available at
-            the links above.
           </p>
         </div>
       </div>
