setting structure of projects section

--- a/index.html
+++ b/index.html
@@ -167,19 +167,20 @@
           <h3 class="section-heading text-uppercase">Projects</h3>
         </div>
       </div>
+      <hr>
       <div class="row" id="agentic-healthcare-analytics">
         <div class="col">
+          <h4>
+            <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics">
+              Agentic Healthcare Analytics
+            </a>
+          </h4>
           <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics" class="link-img">
             <img src="assets/img/logos/agentic-healthcare.png" alt="Agentic Healthcare" style="width:120px;">
           </a>
           <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics" class="link-img">
             <i class="fa fa-github"></i>
           </a>
-          <p>
-            <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics">
-              Agentic Healthcare Analytics
-            </a>
-          </p>
           <p>
             WIP Agentic AI system for performing analytics on healthcare data. Providing an agentic interface for
             interacting with <a href="https://fhir.org/">🔥 FHIR</a> Resources
@@ -189,33 +190,38 @@
       <hr>
       <div class="row" id="siimcdi">
         <div class="col">
+          <h4>
+            <a href="https://siim.org/resources/resource-catalog/clinical-data-informatics/">
+              SIIM Clinical Data Informatics
+            </a>
+          </h4>
           <a href="https://siim.org/resources/resource-catalog/clinical-data-informatics/" class="link-img">
             <img src="assets/img/logos/SIIM-CDI_1920x1080.jpg" alt="SIIM CDI" style="width:200px;">
           </a>
           <p>
-            <a href="https://siim.org/resources/resource-catalog/clinical-data-informatics/">
-              SIIM Clinical Data Informatics
-            </a>
-          </p>
-          <p>
             Along with <a href="https://www.linkedin.com/in/kinsonho">Kinson Ho</a>, I wrote and recorded a pair of
             lectures on the DICOM standard, as it relates to Clinical Data Informaticists. These videos are available at
             the links below.
-          </p>
-          <p>
-            <a href="https://youtu.be/9MFvMtiSgG0?si=e40EPOBD8CEaNNR4">
-              DICOM For Informaticists 1
-            </a>
-            <br>
-            <a href="https://youtu.be/EfmFsDFQdBA?si=e-tUr_7ZKrXMwIFj">
-              DICOM For Informaticists 2
-            </a>
+          <ul>
+            <li>
+              <a href="https://youtu.be/9MFvMtiSgG0?si=e40EPOBD8CEaNNR4">
+                DICOM For Informaticists 1
+              </a>
+            </li>
+            <li>
+              <a href="https://youtu.be/EfmFsDFQdBA?si=e-tUr_7ZKrXMwIFj">
+                DICOM For Informaticists 2
+              </a>
+            </li>
+          </ul>
           </p>
         </div>
       </div>
       <hr>
       <div class="row" id="emr6050">
         <div class="col">
+          <h4>
+            <a href="https://emr6050.github.io">EMR6050</a>: Web Solution for an Urban Mental Health</h4>
           <a href="https://emr6050.github.io" class="link-img">
             <img src="assets/img/logos/emr6050_logo_light.png" alt="EMR6050" style="width:220px;">
           </a>
@@ -223,14 +229,26 @@
             <i class="fa fa-github"></i>
           </a>
           <p>
-            A suite of cloud-based tools to meet the technical needs of a new behavioral health clinic. All instances
-            and data were hosted on AWS. This project was completed as a part of my Master's thesis project.
+            A suite of cloud-based tools to meet the technical needs of a new behavioral health clinic in Milwaukee, WI 
+            (see: <a href="https://www.marquette.edu/psychology/marquette-next-step-clinic.php">Next Step Clinic</a>).
+            All instances and data were hosted on AWS. This project was completed as a part of my Master's thesis project.
+          </p>
+          <p>
+            This project spawned a research effort that produced:<br>
+            Towards Developing an EMR in Mental Health Care for Children's Mental Health Development among the
+            Underserved Communities in USA (2021), by Kazi Zawad Arefin, Kazi Shafiul Alam, Masud Rabbani, Peter Dobbs,
+            Leah Jepson, Amy Leventhal, Amy Van Hecke and Sheikh Iqbal Ahamed (doi: 10.1109/COMPSAC51774.2021.00100)
           </p>
         </div>
       </div>
       <hr>
       <div class="row" id="greatlakessiim">
         <div class="col">
+          <h4>
+            <a href="https://github.com/greatlakessiim" class="link-img">
+              Team Great Lakes (.tgl)
+            </a>
+          </h4>
           <a href="https://greatlakessiim.github.io" class="link-img">
             <img src="assets/img/logos/teamgreatlakes3.png" alt="TeamGreatLakes" style="width:150px;">
           </a>
@@ -243,24 +261,25 @@
           </p>
           <p>
             I presented on the following projects during the SIIM Hackathon Showcase
+            <ul>
+              <li> (2019)
+                <a href="https://peterdobbs.shinyapps.io/FormsOnFHIR/">
+                  Shiny Forms on FHIR
+                </a>: Enables radiologists and developers to create a variety of FHIR Resources and submit them to a live
+                FHIR server.
+              </li>
+              <li> (2018)
+                <a href="https://github.com/GreatLakesSIIM/synoptic-reporting">
+                  Synoptic Reporting as an Enabler
+                </a>: Displays a RadReport<a href="https://radreport.org/"><i class="fa fa-external-link"></i></a>
+                Template for completion by a radiologist and converts the input into a FHIR Resource that can be submitted
+                to a live FHIR server.
+              </li>
+            </ul>
           </p>
-          <ul>
-            <li> (2019)
-              <a href="https://peterdobbs.shinyapps.io/FormsOnFHIR/">
-                Shiny Forms on FHIR
-              </a> Enables radiologists and developers to create a variety of FHIR Resources and submit them to a live
-              FHIR server.
-            </li>
-            <li> (2018)
-              <a href="https://github.com/GreatLakesSIIM/synoptic-reporting">
-                Synoptic Reporting as an Enabler
-              </a> Displays a RadReport<a href="https://radreport.org/"><i class="fa fa-external-link"></i></a>
-              Template for completion by a radiologist and converts the input into a FHIR Resource that can be submitted
-              to a live FHIR server.
-            </li>
-          </ul>
         </div>
       </div>
+      <hr>
     </div>
     </div>
   </section>
