--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
       <hr>
       <div class="row" id="agentic-healthcare-analytics">
         <div class="col">
-          <h4>
+          <h5>
             <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics">
               Agentic Healthcare Analytics
             </a>
-          </h4>
+          </h5>
           <a href="https://github.com/peterdobbs77/agentic-healthcare-analytics" class="link-img">
             <img src="assets/img/logos/agentic-healthcare.png" alt="Agentic Healthcare" style="width:120px;">
           </a>
@@ -190,11 +190,11 @@
       <hr>
       <div class="row" id="siimcdi">
         <div class="col">
-          <h4>
+          <h5>
             <a href="https://siim.org/resources/resource-catalog/clinical-data-informatics/">
               SIIM Clinical Data Informatics
             </a>
-          </h4>
+          </h5>
           <a href="https://siim.org/resources/resource-catalog/clinical-data-informatics/" class="link-img">
             <img src="assets/img/logos/SIIM-CDI_1920x1080.jpg" alt="SIIM CDI" style="width:200px;">
           </a>
@@ -220,8 +220,11 @@
       <hr>
       <div class="row" id="emr6050">
         <div class="col">
-          <h4>
-            <a href="https://emr6050.github.io">EMR6050</a>: Web Solution for an Urban Mental Health</h4>
+          <h5>
+            <a href="https://emr6050.github.io">
+              EMR6050: Web Solution for an Urban Mental Health
+            </a>
+          </h5>
           <a href="https://emr6050.github.io" class="link-img">
             <img src="assets/img/logos/emr6050_logo_light.png" alt="EMR6050" style="width:220px;">
           </a>
@@ -244,11 +247,11 @@
       <hr>
       <div class="row" id="greatlakessiim">
         <div class="col">
-          <h4>
+          <h5>
             <a href="https://github.com/greatlakessiim" class="link-img">
               Team Great Lakes (.tgl)
             </a>
-          </h4>
+          </h5>
           <a href="https://greatlakessiim.github.io" class="link-img">
             <img src="assets/img/logos/teamgreatlakes3.png" alt="TeamGreatLakes" style="width:150px;">
           </a>
