adding google analytics tag

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
     crossorigin="anonymous"></script>
   <script src="js/agency.min.js"></script>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J7HHSLCTVB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-J7HHSLCTVB');
+  </script>
+
 </head>
 
 <body id="page-top">
